// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: Analyses 1`] = `
<Fragment>
  <div
    className="spacer-bottom"
  >
    <label
      className="spacer-right"
      htmlFor="branch-analysis-from-input"
    >
      baseline.analysis_from
    </label>
    <Select
      blurInputOnSelect={true}
      className="input-medium spacer-left"
      inputId="branch-analysis-from-input"
      isSearchable={false}
      onChange={[MockFunction]}
      options={
        [
          {
            "label": "baseline.branch_analyses.ranges.30days",
            "value": 30,
          },
          {
            "label": "baseline.branch_analyses.ranges.allTime",
            "value": 0,
          },
        ]
      }
      value={
        [
          {
            "label": "baseline.branch_analyses.ranges.30days",
            "value": 30,
          },
        ]
      }
    />
  </div>
  <div
    className="branch-analysis-list-wrapper"
  >
    <div
      className="bordered branch-analysis-list"
      onScroll={[MockFunction]}
    >
      <ul>
        <li
          key="noversion"
        >
          <ul
            className="branch-analysis-days-list"
          >
            <li
              className="branch-analysis-day"
              data-day="ISO.1488412800000"
              key="1488412800000"
            >
              <div
                className="branch-analysis-date"
              >
                <DateFormatter
                  date={1488412800000}
                  long={true}
                />
              </div>
              <ul
                className="branch-analysis-analyses-list"
              >
                <li
                  className="branch-analysis"
                  data-date={1488450961000}
                  key="4"
                  onClick={[Function]}
                >
                  <div
                    className="branch-analysis-time spacer-right"
                  >
                    <TimeFormatter
                      date={2017-03-02T10:36:01.000Z}
                      long={false}
                    >
                      <Component />
                    </TimeFormatter>
                  </div>
                  <div
                    className="analysis-selection-button"
                  >
                    <Radio
                      checked={false}
                      onCheck={[Function]}
                      value=""
                    />
                  </div>
                </li>
                <li
                  className="branch-analysis"
                  data-date={1488447361000}
                  key="3"
                  onClick={[Function]}
                >
                  <div
                    className="branch-analysis-time spacer-right"
                  >
                    <TimeFormatter
                      date={2017-03-02T09:36:01.000Z}
                      long={false}
                    >
                      <Component />
                    </TimeFormatter>
                  </div>
                  <Memo(Events)
                    analysisKey="3"
                    events={
                      [
                        {
                          "category": "QUALITY_GATE",
                          "description": "Lorem ipsum dolor sit amet",
                          "key": "E11",
                          "name": "Lorem ipsum",
                          "qualityGate": {
                            "failing": [
                              {
                                "branch": "master",
                                "key": "foo",
                                "name": "Foo",
                              },
                              {
                                "branch": "feature/bar",
                                "key": "bar",
                                "name": "Bar",
                              },
                            ],
                            "status": "ERROR",
                            "stillFailing": true,
                          },
                        },
                      ]
                    }
                    isFirst={false}
                  />
                  <div
                    className="analysis-selection-button"
                  >
                    <Radio
                      checked={false}
                      onCheck={[Function]}
                      value=""
                    />
                  </div>
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li
          key="E11"
        >
          <div
            className="branch-analysis-version-badge"
          >
            <Tooltip
              mouseEnterDelay={0.5}
              overlay="version Lorem ipsum"
            >
              <span
                className="badge"
              >
                Lorem ipsum
              </span>
            </Tooltip>
          </div>
          <ul
            className="branch-analysis-days-list"
          >
            <li
              className="branch-analysis-day"
              data-day="ISO.1488412800000"
              key="1488412800000"
            >
              <div
                className="branch-analysis-date"
              >
                <DateFormatter
                  date={1488412800000}
                  long={true}
                />
              </div>
              <ul
                className="branch-analysis-analyses-list"
              >
                <li
                  className="branch-analysis selected"
                  data-date={1488443761000}
                  key="2"
                  onClick={[Function]}
                >
                  <div
                    className="branch-analysis-time spacer-right"
                  >
                    <TimeFormatter
                      date={2017-03-02T08:36:01.000Z}
                      long={false}
                    >
                      <Component />
                    </TimeFormatter>
                  </div>
                  <Memo(Events)
                    analysisKey="2"
                    events={
                      [
                        {
                          "category": "QUALITY_GATE",
                          "description": "Lorem ipsum dolor sit amet",
                          "key": "E11",
                          "name": "Lorem ipsum",
                          "qualityGate": {
                            "failing": [
                              {
                                "branch": "master",
                                "key": "foo",
                                "name": "Foo",
                              },
                              {
                                "branch": "feature/bar",
                                "key": "bar",
                                "name": "Bar",
                              },
                            ],
                            "status": "ERROR",
                            "stillFailing": true,
                          },
                        },
                        {
                          "category": "VERSION",
                          "description": "Lorem ipsum dolor sit amet",
                          "key": "E11",
                          "name": "Lorem ipsum",
                          "qualityGate": undefined,
                        },
                      ]
                    }
                    isFirst={false}
                  />
                  <div
                    className="analysis-selection-button"
                  >
                    <Radio
                      checked={true}
                      onCheck={[Function]}
                      value=""
                    />
                  </div>
                </li>
              </ul>
            </li>
            <li
              className="branch-analysis-day"
              data-day="ISO.1488326400000"
              key="1488326400000"
            >
              <div
                className="branch-analysis-date"
              >
                <DateFormatter
                  date={1488326400000}
                  long={true}
                />
              </div>
              <ul
                className="branch-analysis-analyses-list"
              >
                <li
                  className="branch-analysis"
                  data-date={1488357421000}
                  key="1"
                  onClick={[Function]}
                >
                  <div
                    className="branch-analysis-time spacer-right"
                  >
                    <TimeFormatter
                      date={2017-03-01T08:37:01.000Z}
                      long={false}
                    >
                      <Component />
                    </TimeFormatter>
                  </div>
                  <div
                    className="analysis-selection-button"
                  >
                    <Radio
                      checked={false}
                      onCheck={[Function]}
                      value=""
                    />
                  </div>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: empty 1`] = `
<Fragment>
  <div
    className="spacer-bottom"
  >
    <label
      className="spacer-right"
      htmlFor="branch-analysis-from-input"
    >
      baseline.analysis_from
    </label>
    <Select
      blurInputOnSelect={true}
      className="input-medium spacer-left"
      inputId="branch-analysis-from-input"
      isSearchable={false}
      onChange={[MockFunction]}
      options={
        [
          {
            "label": "baseline.branch_analyses.ranges.30days",
            "value": 30,
          },
          {
            "label": "baseline.branch_analyses.ranges.allTime",
            "value": 0,
          },
        ]
      }
      value={
        [
          {
            "label": "baseline.branch_analyses.ranges.30days",
            "value": 30,
          },
        ]
      }
    />
  </div>
  <div
    className="branch-analysis-list-wrapper"
  >
    <div
      className="bordered branch-analysis-list"
      onScroll={[MockFunction]}
    >
      <div
        className="big-spacer-top big-spacer-bottom strong"
      >
        baseline.no_analyses
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: loading 1`] = `
<Fragment>
  <div
    className="spacer-bottom"
  >
    <label
      className="spacer-right"
      htmlFor="branch-analysis-from-input"
    >
      baseline.analysis_from
    </label>
    <Select
      blurInputOnSelect={true}
      className="input-medium spacer-left"
      inputId="branch-analysis-from-input"
      isSearchable={false}
      onChange={[MockFunction]}
      options={
        [
          {
            "label": "baseline.branch_analyses.ranges.30days",
            "value": 30,
          },
          {
            "label": "baseline.branch_analyses.ranges.allTime",
            "value": 0,
          },
        ]
      }
      value={
        [
          {
            "label": "baseline.branch_analyses.ranges.30days",
            "value": 30,
          },
        ]
      }
    />
  </div>
  <div
    className="branch-analysis-list-wrapper"
  >
    <div
      className="bordered branch-analysis-list"
      onScroll={[MockFunction]}
    >
      <DeferredSpinner
        className="big-spacer-top"
      />
      <ul />
    </div>
  </div>
</Fragment>
`;
